tests/valid/borrow/shared_borrow.facet
fn f(x: unrestricted isize) -> unrestricted &unrestricted isize {
    (&x)
}
