tests/invalid/return_type_error/ret_usage_mismatch.facet
fn bar(x: linear isize) -> unrestricted isize {
  x
}
